src/objects/Order__c.object
<CustomObject>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street_Address__c</fullName>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Amount_Text__c</fullName>
        <formula>Order_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Amount__c</fullName>
        <label>Order Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Received_Date__c</fullName>
        <label>Order Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Same_as_billing_address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same as billing address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Date__c</fullName>
        <label>Shipping Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipping_Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Provider__c</fullName>
        <label>Shipping Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USPS</fullName>
                </value>
                <value>
                    <fullName>FEDEX</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street_Address__c</fullName>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <label>Tracking Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Order_Status__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CM - {0000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>